@@ -1,3 +1,3 @@
-// 1.20.1	2024-02-04T23:10:32.253412	CurseOfPandora Config
+// 1.20.1	2024-02-19T11:53:30.685477	CurseOfPandora Config
 a42081b2157bf198241ab9a36df17c280227b1c5 data/curseofpandora/l2hostility_config/trait/reality.json
-c7fb69b90cd80cda869cedb983b853ed9632a769 data/curseofpandora/l2tabs_config/attribute_entry/pandora.json
+28a438434695e1ad65f011be666e5364d607e684 data/curseofpandora/l2tabs_config/attribute_entry/pandora.json
