@@ -1,6 +1,4 @@
 {
-  "attribute.name.damage_absorption": "uoıʇdɹosqⱯ ǝbɐɯɐᗡ",
-  "attribute.name.damage_reduction": "uoıʇɔnpǝᴚ ɹǝʇɟɐ ǝbɐɯɐᗡ",
   "attribute.name.reality_index": "xǝpuI ʎʇıןɐǝᴚ",
   "attribute.name.spell_tolerance": "ǝɔuɐɹǝןo⟘ ןןǝdS",
   "curseofpandora.tooltip.abyssal.crown": "ɔıbɐɯ ssɐdʎq oʇ ǝbɐɯɐp ǝǝןǝɯ ɹoɟ ǝɔuɐɥɔ %s%%+ uıɐb noʎ '0 ʍoןǝq sʞɔoןq %s ʎɹǝʌǝ ɹoℲ",
